Definiciòn de la Señal de Informaciòn

--- a/SIMULACIONMODULACIONAM.ipynb
+++ b/SIMULACIONMODULACIONAM.ipynb
@@ -40,6 +40,31 @@
         "plt.grid(True)\n",
         "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Parámetros de la señal de información (DIEGO ROMERO)\n",
+        "frecuencia_informacion = 12 # Frecuencia de la señal de información en Hz\n",
+        "amplitud_informacion = 0.5 # Amplitud de la señal de información\n",
+        "# Señal de información\n",
+        "informacion = amplitud_informacion * np.sin(2 * np.pi *\n",
+        "frecuencia_informacion * t)\n",
+        "# Visualizar la señal de información\n",
+        "plt.figure(figsize=(10, 4))\n",
+        "plt.plot(t, informacion, label='Señal de Información', color='r')\n",
+        "plt.title('Señal de Información')\n",
+        "plt.xlabel('Tiempo [s]')\n",
+        "plt.ylabel('Amplitud')\n",
+        "plt.legend(loc='upper right')\n",
+        "plt.grid(True)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "XIx2POAjUdBT"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
