tercera parte del codigo

--- a/SIMULACIONMODULACIONAM.ipynb
+++ b/SIMULACIONMODULACIONAM.ipynb
@@ -65,6 +65,27 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Modulación AM: combinación de la portadora y la señal de información (Carolina Serrano)\n",
+        "modulada = (1 + informacion) * portadora # Fórmula de modulación AM\n",
+        "# Visualizar la señal modulada\n",
+        "plt.figure(figsize=(10, 4))\n",
+        "plt.plot(t, modulada, label='Señal Modulda AM', color='g')\n",
+        "plt.title('Señal Modulda AM')\n",
+        "plt.xlabel('Tiempo [s]')\n",
+        "plt.ylabel('Amplitud')\n",
+        "plt.legend(loc='upper right')\n",
+        "plt.grid(True)\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "sJNsgXvYd9XU"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
